--- a/code/views/index.erb
+++ b/code/views/index.erb
@@ -1,12 +1,5 @@
 <h1>Animal Shelter Home</h1>
 
-<!-- <p><a href="/pets/new">New Pet.</a></p> -->
-<hr />
-<% for pet in @pets %>
-<p>Name: <%= pet.name %></p>
-<p>Breed: <%= pet.breed %></p>
-<p>Days At The Shelter: <%= pet.days_in_captivity %></p>
-<!-- <p>ID: <%= pet.id %></p> -->
-<p><a href="pets/<%= pet.id %>">Show pet details.</a></p>
-<hr />
+<p>Welcome to the animal shelter! Click below to see our pets!</p>
+<p><a href="pets/show.erb"><img src="https://lh5.ggpht.com/WLSUWqj9TsA2T5gcaWe4zpNJq1i81kRHIGDSm5aJ9wM1QijBqlnVSkV7V_f9Oy3S1Lg=h310"/>Click here!</a></p>
 <% end %>
