--- a/code/views/show.erb
+++ b/code/views/show.erb
@@ -6,7 +6,7 @@
 <p>Name: <%= pet.name %></p>
 <p>Breed: <%= pet.breed %></p>
 <p>Days At The Shelter: <%= pet.days_in_captivity %></p>
-<!-- <p>ID: <%= pet.id %></p> -->
+<p>ID: <%= pet.id %></p>
 <p><a href="pets/<%= pet.id %>">Show pet details.</a></p>
 <hr />
 <% end %>
