--- a/code/views/index.erb
+++ b/code/views/index.erb
@@ -1,5 +1,3 @@
 <h1>Animal Shelter Home</h1>
 
-<p>Welcome to the animal shelter! Click below to see our pets!</p>
-<p><a href="pets"><img src="https://lh5.ggpht.com/WLSUWqj9TsA2T5gcaWe4zpNJq1i81kRHIGDSm5aJ9wM1QijBqlnVSkV7V_f9Oy3S1Lg=h310" alt title="Click here to be transported."/></a></p>
-<p><a href="pets">Click here!</a></p>
+<p><a href="pets">Welcome to the animal shelter! Click here to see the animals under our care!</a></p>
