--- a/code/views/layout.erb
+++ b/code/views/layout.erb
@@ -6,9 +6,8 @@
 </head>
 <body>
   <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/pets">All Pets</a></li>
+    <a href="/">Home</a>
+    <a href="/pets">All Pets</a>
   </nav>
   <%= yield %>
 </body>
