--- a/code/public/style.css
+++ b/code/public/style.css
@@ -24,7 +24,6 @@ a:hover {
 }
 
 div {
-  padding-left: 0.5%;
-  padding-top: 0.5%;
-  background: rgba(246, 243, 243, 0.25);
+  padding: 0.5%;
+  background: rgba(246, 243, 243, 0.3);
 }
