--- a/code/views/show_pet.erb
+++ b/code/views/show_pet.erb
@@ -1,6 +1,8 @@
 <h1>Pet Details</h1>
 
+<div class="background">
 <p>Name: <%= @pet.name %></p>
 <p>Breed: <%= @pet.breed %></p>
 <p>Owner ID: <%= @pet.owner_id %></p>
 </p>
+</div>
