--- a/code/views/index.erb
+++ b/code/views/index.erb
@@ -1,3 +1,5 @@
 <h1>Animal Shelter Home</h1>
 
+<div class="background">
 <p><a href="pets">Welcome to the animal shelter! Click here to see the animals under our care!</a></p>
+</div>
