--- a/code/views/show_pet.erb
+++ b/code/views/show_pet.erb
@@ -3,6 +3,8 @@
 <div class="background">
 <p>Name: <%= @pet.name %></p>
 <p>Breed: <%= @pet.breed %></p>
+<p>Days At The Shelter: <%= @pet.days_in_captivity %></p>
+<p>ID: <%= @pet.id %></p>
 <p>Owner ID: <%= @pet.owner_id %></p>
 </p>
 </div>
