Changed headers for all pages to better reflect the nature of the website.

--- a/code/views/index.erb
+++ b/code/views/index.erb
@@ -1,4 +1,4 @@
-<h1>Animal Shelter Home</h1>
+<h1>Animal Shelter</h1>
 
 <div class="background">
 <p><a href="pets">Welcome to the animal shelter! Click here to see the animals under our care!</a></p>
