--- a/code/views/layout.erb
+++ b/code/views/layout.erb
@@ -8,6 +8,7 @@
   <nav>
     <a href="/">Home</a>
     <a href="/pets">All Pets</a>
+    <a href="/owners">All Owners.</a>
   </nav>
   <%= yield %>
 </body>
