--- a/code/views/show.erb
+++ b/code/views/show.erb
@@ -1,6 +1,6 @@
 <h1>Our Animals</h1>
 
-<div class="petbox">
+<div class="background">
 <% for pet in @pets %>
 <p>Name: <%= pet.name %></p>
 <p><a href="pets/<%= pet.id %>">Show pet details.</a></p>
