Minor adjustment to nav bar to better fit flow of the pages.

--- a/code/views/layout.erb
+++ b/code/views/layout.erb
@@ -6,9 +6,9 @@
 </head>
 <body>
   <nav>
-    <p><a href="/">Home</a></p>
-    <p><a href="/pets">All Pets</a></p>
-    <p><a href="/owners">All Owners.</a></p>
+    <a href="/">Home</a>
+    <a href="/pets">All Pets</a>
+    <a href="/owners">All Owners.</a>
   </nav>
   <%= yield %>
 </body>
