Removed punctuation mark from All Owners link.

--- a/code/views/layout.erb
+++ b/code/views/layout.erb
@@ -8,7 +8,7 @@
   <nav>
     <a href="/">Home</a>
     <a href="/pets">All Pets</a>
-    <a href="/owners">All Owners.</a>
+    <a href="/owners">All Owners</a>
   </nav>
   <%= yield %>
 </body>
